--- a/ClienteEscritorio/src/resources/views/teachers.fxml
+++ b/ClienteEscritorio/src/resources/views/teachers.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="907.0" styleClass="mainPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="morales.david.desktop.controllers.TeachersController">
    <children>
-      <TableView fx:id="teachersTable" prefHeight="600.0" prefWidth="814.0" AnchorPane.bottomAnchor="125.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+      <TableView fx:id="teachersTable" prefHeight="600.0" prefWidth="814.0" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
         <columns>
           <TableColumn fx:id="idColumn" editable="false" prefWidth="75.0" text="ID" />
             <TableColumn fx:id="numberColumn" editable="false" prefWidth="75.0" text="NÚMERO" />
@@ -24,9 +24,9 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" styleClass="bottonsBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
          <children>
-            <Button fx:id="newButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="162.0" styleClass="newButton" text="NUEVO">
+            <Button fx:id="newButton" mnemonicParsing="false" onMouseClicked="#handleButtonAction" prefHeight="50.0" prefWidth="162.0" styleClass="newButton" text="NUEVO">
                <padding>
                   <Insets bottom="15.0" left="25.0" right="25.0" top="15.0" />
                </padding>
@@ -34,7 +34,7 @@
                   <Insets bottom="25.0" right="25.0" top="25.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="editButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="162.0" styleClass="editButton" text="EDITAR">
+            <Button fx:id="editButton" mnemonicParsing="false" onMouseClicked="#handleButtonAction" prefHeight="50.0" prefWidth="162.0" styleClass="editButton" text="EDITAR">
                <padding>
                   <Insets bottom="15.0" left="25.0" right="25.0" top="15.0" />
                </padding>
@@ -42,7 +42,7 @@
                   <Insets bottom="25.0" right="25.0" top="25.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="162.0" styleClass="deleteButton" text="ELIMINAR">
+            <Button fx:id="deleteButton" mnemonicParsing="false" onMouseClicked="#handleButtonAction" prefHeight="50.0" prefWidth="162.0" styleClass="deleteButton" text="ELIMINAR">
                <padding>
                   <Insets bottom="15.0" left="25.0" right="25.0" top="15.0" />
                </padding>
