--- a/ClienteEscritorio/src/resources/modals/editSubjectModal.fxml
+++ b/ClienteEscritorio/src/resources/modals/editSubjectModal.fxml
@@ -32,7 +32,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Spinner fx:id="numberField" prefHeight="34.0" prefWidth="553.0" />
+                  <Spinner fx:id="numberField" editable="true" prefHeight="34.0" prefWidth="553.0" />
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" prefHeight="28.0" prefWidth="392.0" spacing="5.0">
