--- a/ClienteEscritorio/src/resources/modals/newSubjectModal.fxml
+++ b/ClienteEscritorio/src/resources/modals/newSubjectModal.fxml
@@ -8,9 +8,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import org.controlsfx.control.ListSelectionView?>
 
-<DialogPane prefHeight="512.0" prefWidth="574.0" styleClass="mainPane" stylesheets="@../css/dialog.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="morales.david.desktop.controllers.modals.SubjectModalController">
+<DialogPane prefHeight="331.0" prefWidth="574.0" styleClass="mainPane" stylesheets="@../css/dialog.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="morales.david.desktop.controllers.modals.SubjectModalController">
    <header>
       <AnchorPane prefHeight="60.0" prefWidth="375.0" styleClass="topPane">
          <children>
@@ -32,7 +31,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Spinner fx:id="numberField" prefHeight="34.0" prefWidth="553.0" />
+                  <Spinner fx:id="numberField" editable="true" prefHeight="34.0" prefWidth="553.0" />
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" prefHeight="28.0" prefWidth="392.0" spacing="5.0">
@@ -53,16 +52,6 @@
                      </font>
                   </Label>
                   <TextField fx:id="nameField" promptText="Nombre" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER_LEFT" prefHeight="28.0" prefWidth="392.0" spacing="5.0">
-               <children>
-                  <Label text="Cursos:">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <ListSelectionView fx:id="courseField" minHeight="250.0" prefHeight="250.0" prefWidth="544.0" />
                </children>
             </VBox>
          </children>
