--- a/ClienteAndroid/app/src/main/res/layout/activity_login.xml
+++ b/ClienteAndroid/app/src/main/res/layout/activity_login.xml
@@ -63,6 +63,7 @@
         android:backgroundTint="@color/secondary_main"
         android:padding="20dp"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
