--- a/ClienteAndroid/app/src/main/res/values/themes.xml
+++ b/ClienteAndroid/app/src/main/res/values/themes.xml
@@ -4,7 +4,11 @@
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
-    <style name="ClienteAndroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="ActionBarStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="background">@color/primary_dark</item>
+    </style>
+
+    <style name="ClienteAndroid" parent="Theme.MaterialComponents.Light.DarkActionBar">
 
         <item name="colorPrimary">@color/primary_main</item>
         <item name="colorPrimaryVariant">@color/primary_light</item>
@@ -14,7 +18,9 @@
         <item name="colorSecondaryVariant">@color/secondary_light</item>
         <item name="colorOnSecondary">@color/black</item>
 
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="actionBarStyle">@style/ActionBarStyle</item>
+
+        <item name="android:statusBarColor" tools:targetApi="l">@color/primary_dark</item>
 
     </style>
 
