--- a/ClienteAndroid/app/src/main/res/layout/activity_login.xml
+++ b/ClienteAndroid/app/src/main/res/layout/activity_login.xml
@@ -19,40 +19,103 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/act_login_input_username"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/act_login_cardview_username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="75dp"
         android:layout_marginEnd="50dp"
-        android:hint="@string/act_login_input_username"
-        android:background="@color/white"
-        android:padding="20dp"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/act_login_imageview"
-        android:inputType="text" />
+        app:cardCornerRadius="15dp"
+        >
 
-    <EditText
-        android:id="@+id/act_login_input_password"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:tint="#CBCBCB"
+                android:src="@drawable/ic_teacher" />
+
+            <EditText
+                android:id="@+id/act_login_input_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:hint="@string/act_login_input_username"
+                android:background="@color/white"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:paddingRight="20dp"
+                android:paddingLeft="10dp"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/act_login_imageview"
+                android:inputType="text" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/act_login_cardview_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="50dp"
-        android:hint="@string/act_login_input_password"
-        android:background="@color/white"
-        android:padding="20dp"
-        android:textSize="18sp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/act_login_input_username"
-        android:ems="10"
-        android:inputType="textPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/act_login_cardview_username">
 
-    <Button
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:tint="#CBCBCB"
+                android:padding="5dp"
+                android:src="@drawable/ic_password" />
+
+            <EditText
+                android:id="@+id/act_login_input_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_marginTop="100dp"
+                android:background="@color/white"
+                android:ems="10"
+                android:hint="@string/act_login_input_password"
+                android:inputType="textPassword"
+                android:paddingLeft="10dp"
+                android:paddingTop="20dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="20dp"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/act_login_cardview_username" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/act_login_button_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -61,11 +124,24 @@
         android:layout_marginBottom="50dp"
         android:text="@string/act_login_button_login"
         android:backgroundTint="@color/secondary_main"
-        android:padding="20dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/act_login_button_login"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:padding="20dp"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
