--- a/ClienteAndroid/app/src/main/res/layout/activity_login.xml
+++ b/ClienteAndroid/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="75dp"
         android:layout_marginEnd="50dp"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/act_login_imageview"
@@ -74,6 +75,7 @@
         android:layout_marginTop="35dp"
         android:layout_marginEnd="50dp"
         app:cardCornerRadius="15dp"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/act_login_cardview_username">
