--- a/ClienteAndroid/app/src/main/res/values/themes.xml
+++ b/ClienteAndroid/app/src/main/res/values/themes.xml
@@ -24,4 +24,13 @@
 
     </style>
 
+    <style name="ClienteAndroid.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="ClienteAndroid.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="ClienteAndroid.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
