--- a/ClienteAndroid/app/src/main/res/layout/item_course.xml
+++ b/ClienteAndroid/app/src/main/res/layout/item_course.xml
@@ -11,7 +11,7 @@
     app:cardCornerRadius="15dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:id="@+id/item_classroom_cardview"
+    android:id="@+id/item_course_cardview"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +20,7 @@
         >
 
         <View
-            android:id="@+id/item_classroom_topview"
+            android:id="@+id/item_course_topview"
             android:layout_width="match_parent"
             android:layout_height="15dp"
             android:background="@color/secondary_light"
@@ -32,32 +32,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/item_classroom_topview">
+            app:layout_constraintTop_toBottomOf="@+id/item_course_topview">
 
             <TextView
-                android:id="@+id/item_classroom_name"
+                android:id="@+id/item_course_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="15dp"
-                android:paddingLeft="15dp"
-                android:text="@string/item_classroom_name"
+                android:padding="15dp"
+                android:textAlignment="center"
+                android:text=""
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/item_classroom_floor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="15dp"
-                android:paddingLeft="15dp"
-                android:paddingBottom="15dp"
-                android:text="@string/item_classroom_floor"
-                android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
