--- a/ClienteAndroid/app/src/main/res/layout/activity_disconnected.xml
+++ b/ClienteAndroid/app/src/main/res/layout/activity_disconnected.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_main"
+    android:background="?attr/primaryBackgroundColor"
     android:orientation="vertical"
     android:gravity="center"
     android:padding="50dp"
