--- a/ClienteAndroid/app/src/main/res/layout/item_course.xml
+++ b/ClienteAndroid/app/src/main/res/layout/item_course.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/secondary_main"
+    android:backgroundTint="?attr/itemBottomBarBackgroundColor"
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
     android:layout_marginTop="25dp"
@@ -23,7 +23,7 @@
             android:id="@+id/item_course_topview"
             android:layout_width="match_parent"
             android:layout_height="15dp"
-            android:background="@color/secondary_light"
+            android:background="?attr/itemTopBarBackgroundColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
