--- a/ClienteAndroid/app/src/main/res/layout/item_subject.xml
+++ b/ClienteAndroid/app/src/main/res/layout/item_subject.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/secondary_main"
+    android:backgroundTint="?attr/itemBottomBarBackgroundColor"
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
     android:layout_marginTop="25dp"
@@ -29,7 +29,7 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:background="@color/secondary_light"
+            android:background="?attr/itemTopBarBackgroundColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
