--- a/ClienteEscritorio/src/resources/views/import.fxml
+++ b/ClienteEscritorio/src/resources/views/import.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,16 +13,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="660.0" styleClass="mainPane" stylesheets="@../css/import_view.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="morales.david.desktop.controllers.ImportController">
+<AnchorPane prefHeight="600.0" prefWidth="957.0" styleClass="mainPane" stylesheets="@../css/import_view.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="morales.david.desktop.controllers.ImportController">
    <children>
-      <VBox alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="776.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
+            <HBox alignment="CENTER" prefHeight="600.0" prefWidth="958.0" VBox.vgrow="ALWAYS">
                <children>
-                  <GridPane prefHeight="605.0" prefWidth="681.0" HBox.hgrow="NEVER">
+                  <GridPane prefHeight="600.0" HBox.hgrow="ALWAYS">
                     <columnConstraints>
                       <ColumnConstraints hgrow="ALWAYS" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
-                      <ColumnConstraints hgrow="ALWAYS" maxWidth="559.0" minWidth="10.0" prefWidth="539.0" />
+                      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="559.0" minWidth="10.0" prefWidth="539.0" />
                         <ColumnConstraints hgrow="ALWAYS" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
                     </columnConstraints>
                     <rowConstraints>
@@ -38,7 +40,7 @@
                            <center>
                               <Label fx:id="dropLabel" alignment="CENTER" contentDisplay="CENTER" lineSpacing="1.0" prefHeight="118.0" prefWidth="665.0" text="Arrastra o pulsa para elegir el fichero Access" textAlignment="CENTER" textFill="#656565" textOverrun="WORD_ELLIPSIS" wrapText="true" BorderPane.alignment="CENTER">
                                  <font>
-                                    <Font name="Microsoft Sans Serif" size="36.0" />
+                                    <Font name="Microsoft Sans Serif" size="34.0" />
                                  </font>
                               </Label>
                            </center>
@@ -48,13 +50,20 @@
                               <Font name="Microsoft Sans Serif" size="36.0" />
                            </font>
                         </Label>
-                        <Label fx:id="messageLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="143.0" prefWidth="454.0" text="" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
                      </children>
                   </GridPane>
+                  <ScrollPane hbarPolicy="NEVER" prefHeight="600.0" prefWidth="307.0" styleClass="mainPane">
+                     <content>
+                        <VBox fx:id="messagesBox" prefWidth="299.0" spacing="15.0">
+                           <padding>
+                              <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                           </padding>
+                        </VBox>
+                     </content>
+                     <HBox.margin>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                     </HBox.margin>
+                  </ScrollPane>
                </children>
             </HBox>
          </children>
