--- a/ClienteAndroid/app/src/main/res/layout/activity_classrooms.xml
+++ b/ClienteAndroid/app/src/main/res/layout/activity_classrooms.xml
@@ -13,10 +13,54 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:paddingBottom="25dp"
+        android:layout_marginTop="105dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_classroom" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/act_classrooms_searcheempty_cardview"
+        android:backgroundTint="?attr/listFilterCardBackgroundColor"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
+        app:cardCornerRadius="15dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:padding="5dp"
+                app:tint="@color/black"
+                android:src="@drawable/ic_search"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:padding="16dp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:text="Buscar aulas libres"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
