--- a/ClienteEscritorio/src/main/resources/css/scheduler_view.css
+++ b/ClienteEscritorio/src/main/resources/css/scheduler_view.css
@@ -28,6 +28,22 @@
     -fx-text-fill: #000;
 }
 
+.scheduleButtonHighlightDestiny {
+    -fx-background-color: #FFF;
+    -fx-text-fill: #000;
+    -fx-border-color: #03adfc;
+    -fx-border-width: 4;
+    -fx-border-style: segments(10, 15, 15, 15)  line-cap round ;
+}
+
+.scheduleButtonHighlightOrigin {
+    -fx-background-color: #FFF;
+    -fx-text-fill: #000;
+    -fx-border-color: #00ff3c;
+    -fx-border-width: 4;
+    -fx-border-style: segments(10, 15, 15, 15)  line-cap round ;
+}
+
 .schedulerTabButton {
     -fx-background-color: #FFF;
     -fx-text-fill: #000;
